# ArchiveStream

./: .env.example  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.crawler  Dockerfile.indexer  Dockerfile.ui  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  docker-compose.prod.yml
.github/workflows/: backend.yml  ci.yml  crawler.yml  ui.yml
apps/web-ui/: .prettierignore  eslint.config.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tailwind.config.ts
apps/web-ui/src/app/: layout.tsx  page.tsx
apps/web-ui/src/app/dashboard/: page.tsx
apps/web-ui/src/app/web/[timestamp]/[...url]/: page.tsx
apps/web-ui/src/components/: DiffViewer.tsx  TimeScrubber.tsx  VisualDiff.tsx
apps/web-ui/src/components/dashboard/: CrawlOutcomes.tsx  FrontierHeatmap.tsx
crates/archive-api/: Cargo.toml
crates/archive-api/src/: diff.rs  federation.rs  main.rs  search.rs  semantic.rs
crates/archive-api/src/replay/: mod.rs  resolver.rs  rewriter.rs  warc_reader.rs
crates/common/: Cargo.toml
crates/common/src/: extractor.rs  lib.rs  tracing.rs  warc.rs
crates/crawler/: Cargo.toml
crates/crawler/src/: dedup.rs  fetcher.rs  frontier.rs  lib.rs  main.rs  parser.rs  rate_limit.rs  region.rs  robots.rs  warc.rs
crates/federation/: Cargo.toml
crates/federation/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs  opensearch_client.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: lib.rs
crates/ipfs/: Cargo.toml
crates/ipfs/src/: lib.rs  storage.rs
crates/notification/src/: lib.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: alert.rs  classifier.rs  lib.rs
crates/vision/: Cargo.toml
crates/vision/src/: detector.rs  lib.rs
docs/: CONTRIBUTING.md  FEDERATION_DESIGN.md
infra/: compose.yml
infra/docker/: api.Dockerfile  crawler.Dockerfile  ui.Dockerfile
