[package]
name = "archive-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archive-common = { path = "../common" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
