[package]
name = "archive-federation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
archive-common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
reqwest.workspace = true
dashmap = "5.5" # Concurrent map for peer list
uuid.workspace = true
chrono.workspace = true
